syntax = "proto3";

package paymentproto;

enum Currency {
    SGD = 0;
    USD = 1;
    EUR = 2;
    JPY = 3;
    GBP = 4;
    CNY = 5;
    MYR = 6;
}

message Cat {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    int32 breedId = 4;
    string imageLink = 5;
}

message Breed {
    int32 id = 1;
    string name = 2;
    repeated Cat cats = 3;
}

message Customer {
    int32 id = 1;
    string name = 2;
}

message Payment {
    int32 id = 1;
    int32 customerId = 2;
    int32 catId = 3;
    float amount = 4;
    Currency currency = 5;
}

message PaymentRequest {
    int32 customerId = 1;
    int32 catId = 2;
    float amount = 3;
    Currency currency = 4;
}

message PaymentResponse {
    int32 id = 1;
    Customer customer = 2;
    Cat cat = 3;
    float amount = 4;
    Currency currency = 5;
}

service PaymentService {
    rpc makePayment(PaymentRequest) returns (PaymentResponse) {}
}
